--- a/TBTP/TBTPDoc.html
+++ b/TBTP/TBTPDoc.html
@@ -31,6 +31,7 @@ p {
     <p>f- Tappez sur Send UDID via E-mail</p>
     <img src="https://dl.dropboxusercontent.com/s/q492a7ewkrdhckh/5.png" width="50%" height="50%">
     <p>g- Envoyez l'UDID &agrave; tbtp.chauffeur.app@gmail.com</p>
+    <p><span style="color: #ff0000;">Attention : Il faut include votre numero de telephone dans le mail à envoyer, sinon votre demande ne sera pas prise en consideration !</span></p>
     <img src="https://dl.dropboxusercontent.com/s/kfpj8c5k5z67xpc/6.png" width="50%" height="50%">
     <p>2- Il faut attendre un message de confirmation que vous allez recevoir dans votre adresse mail avant de passer &agrave; l'&eacute;tape suivante. (Maximum 2 jours)</p>
     <p>3- Installation</p>
@@ -46,17 +47,15 @@ p {
     <h3>Planning</h3>
     <img src="https://dl.dropboxusercontent.com/s/yksvm08q3ud55xw/10.png" width="50%" height="50%">
     <p>Il s'agit du planning du jour.</p>
-    <p>Cette section permet de :&nbsp;</p>
-    <p>Consulter le planning du jour</p>
-    <p>Envoyer des lettres de voitures</p>
+    <p>Cette section permet de consulter le planning du jour et d'envoyer des lettres de voitures.</p>
     <h4>Android</h4>
     <p>Vous pouvez prendre des photos des lettres de voiture m&ecirc;me si vous n'avez pas un acc&eacute;s &agrave; Internet, l'application va enregistrer les lettres de voiture. Elle va envoyer ces lettres d&egrave;s que vous &ecirc;tes connect&eacute; de nouveau &agrave; Internet.&nbsp;</p>
     <p>NB : Les lettres seront envoy&eacute;s m&ecirc;me si vous&nbsp;quittez l'application.</p>
-    <p>Attention : Il faut quand-m&ecirc;me verifier que les lettres de voiture ont &eacute;t&eacute; bien envoy&eacute;es dans la section Calendrier .</p>
+    <p><span style="color: #ff0000;">Attention : Il faut quand-m&ecirc;me verifier que les lettres de voiture ont &eacute;t&eacute; bien envoy&eacute;es dans la section Calendrier .</span></p>
     <h4>iOS (iPhone)</h4>
     <p>Vous pouvez prendre des photos des lettres de voiture m&ecirc;me si vous n'avez pas un acc&eacute;s &agrave; Internet, l'application va enregistrer les lettres de voitures.</p>
     <p>NB : Vous pouvez quitter l'application. Mais, Il faut revenir &agrave; l'application d&egrave;s que vous &ecirc;tes connect&eacute; de nouveau &agrave; Internet pour lancer l'envoi des lettres de voiture.&nbsp;</p>
-    <p>Attention : Il faut quand-m&ecirc;me verifier que les lettres de voiture ont &eacute;t&eacute; bien envoy&eacute;es dans la section Calendrier .</p>
+    <p><span style="color: #ff0000;">Attention : Il faut quand-m&ecirc;me verifier que les lettres de voiture ont &eacute;t&eacute; bien envoy&eacute;es dans la section Calendrier .</span></p>
     <h3>Profile</h3>
     <img src="https://dl.dropboxusercontent.com/s/mldmh1kz2r2g0y0/11.png" width="50%" height="50%">
     <p>Dans cette section, vous pouvez consulter vos documents.</p>
