--- a/TBTP/TBTPDoc.html
+++ b/TBTP/TBTPDoc.html
@@ -31,7 +31,7 @@ p {
     <p>f- Tappez sur Send UDID via E-mail</p>
     <img src="https://dl.dropboxusercontent.com/s/q492a7ewkrdhckh/5.png" width="50%" height="50%">
     <p>g- Envoyez l'UDID &agrave; tbtp.chauffeur.app@gmail.com</p>
-    <p><span style="color: #ff0000;">Attention : Il faut include votre numero de telephone dans le mail à envoyer, sinon votre demande ne sera pas prise en consideration !</span></p>
+    <p><span style="color: #ff0000;">Attention : Il faut include votre numéro de telephone dans le mail à envoyer, sinon votre demande ne sera pas prise en consideration !</span></p>
     <img src="https://dl.dropboxusercontent.com/s/kfpj8c5k5z67xpc/6.png" width="50%" height="50%">
     <p>2- Il faut attendre un message de confirmation que vous allez recevoir dans votre adresse mail avant de passer &agrave; l'&eacute;tape suivante. (Maximum 2 jours)</p>
     <p>3- Installation</p>
