--- a/CrossLog/Page de tracking Crosslog/tracking.html
+++ b/CrossLog/Page de tracking Crosslog/tracking.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Tracking Easy-Colis</title>
-  <meta name="description" content="Demo of Material design portfolio template by TemplateFlip.com." />
+  <meta name="description" content="Page de tracking easy-colis" />
   <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="styles/material.indigo-pink.min.css" rel="stylesheet">
