--- a/CrossLog/Page de tracking Crosslog/tracking_avec_pr.html
+++ b/CrossLog/Page de tracking Crosslog/tracking_avec_pr.html
@@ -196,7 +196,7 @@
 }
 .table-striped>tbody>tr:nth-child(odd)>td, 
 .table-striped>tbody>tr:nth-child(odd)>th {
-   background-color: rgba(232, 219, 233, 0.219);
+  background-color: rgba(232, 219, 233, 0.219);
  }
   </style>
   <script type='text/javascript' src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
@@ -234,7 +234,7 @@
         </header>
           <div class="mdl-cell mdl-cell--9-col-desktop mdl-cell--6-col-tablet mdl-cell--4-col-phone  mdl-shadow--4dp nomarginsaboveme">
             <hr class="Darkhr MobileSeparator">
-            <div class="mdl-card__supporting-text" style="color: #000000; margin: 0 auto;">
+            <div class="mdl-card__supporting-text" style="padding: 0;color: #000000; margin: 0 auto;">
               <div class="table-responsive-md">
                 <table class="table table-striped">
                   <tbody>
@@ -269,7 +269,7 @@
           
           <div class="mdl-cell mdl-cell--9-col-desktop mdl-cell--6-col-tablet mdl-cell--4-col-phone  mdl-shadow--4dp nomarginsaboveme">
             <hr class="Darkhr MobileSeparator">
-            <div class="mdl-card__supporting-text" style="color: #000000; margin: 0 auto;">
+            <div class="mdl-card__supporting-text" style="padding: 0; color: #000000; margin: 0 auto;">
               <div class="table-responsive-md">
                 <table class="table table-striped">
                   <tbody>
@@ -311,7 +311,7 @@
           <div class="mdl-cell mdl-cell--9-col-desktop mdl-cell--6-col-tablet mdl-cell--4-col-phone  mdl-shadow--4dp nomarginsaboveme"
             style="height: fit-content;">
             <hr class="Darkhr MobileSeparator">
-            <div class="mdl-card__supporting-text" style="width: 100%;">
+            <div class="mdl-card__supporting-text" style=" padding: 0; width: 100%;">
               <div>
                 <div class="card ">
                   <div id="HorizontalProgressBar" class="fullwidth">
@@ -407,7 +407,7 @@
           <header
             class="mdl-cell mdl-cell--3-col-desktop mdl-cell--2-col-tablet mdl-cell--4-col-phone mdl-color-text--white  mdl-shadow--4dp nomarginsunderme"
             style="display: flex; align-items: center; justify-content: center;">
-            <div class="mdl-card__supporting-text" style="padding-right: 0px; padding-left: 0px; text-align: center;">
+            <div class="mdl-card__supporting-text" style="padding: 0; text-align: center;">
               <i class="material-icons fheaders">
                 format_list_bulleted
                 </i>
@@ -452,7 +452,7 @@
           <header
             class="mdl-cell mdl-cell--3-col-desktop mdl-cell--2-col-tablet mdl-cell--4-col-phone mdl-color-text--white  mdl-shadow--4dp nomarginsunderme"
             style="display: flex; align-items: center; justify-content: center;">
-            <div class="mdl-card__supporting-text" style="padding-right: 0px; padding-left: 0px; text-align: center;">
+            <div class="mdl-card__supporting-text" style="padding: 0; text-align: center;">
               <i class="fa fa-map-marker fheaders" aria-hidden="true"></i>
               <div class="h2style" >Adresse de livraison</div>
             </div>
@@ -460,7 +460,7 @@
           <div class="mdl-cell mdl-cell--9-col-desktop mdl-cell--6-col-tablet mdl-cell--4-col-phone  mdl-shadow--4dp nomarginsaboveme"
             style="height: fit-content;">
             <hr class="Darkhr MobileSeparator">
-            <div class="mdl-card__supporting-text" style="color: #000000; margin: 0 auto; width: 95%; padding-right: 0px; padding-left: 0px;">
+            <div class="mdl-card__supporting-text" style="padding: 0; color: #000000; margin: 0 auto; width: 95%;">
               <div class="table-responsive-md">
                 <table class="table table-striped">
                   <tbody>
