--- a/CrossLog/Page de tracking Crosslog/tracking.html
+++ b/CrossLog/Page de tracking Crosslog/tracking.html
@@ -263,7 +263,7 @@
             style="display: flex; align-items: center; justify-content: center;">
             <div style="vertical-align: top; display: inline-block;text-align: center;">
               <img class="article-image" src="img/tabledetail.png" border="0" alt="" style="width: 20%; opacity: 0.55;">
-              <div class="h2style">Détail du suivi</div>
+              <div class="h2style">Détail des colis</div>
             </div><br>
           </header>
           
