--- a/CrossLog/Page de tracking Crosslog/tracking.html
+++ b/CrossLog/Page de tracking Crosslog/tracking.html
@@ -70,7 +70,6 @@
 
     @media (max-width: 479px) {
 
-
       .nomarginsunderme {
         margin-bottom: -4px;
         -moz-box-shadow: 2px 2px 3px rgba(0, 0, 0, .14), -2px 2px 3px rgba(0, 0, 0, .12);
@@ -104,8 +103,14 @@
     .ProgressSupportCard{
         width : 30%;
       }
-
+      @media(max-width: 995px){
+      #PackageStatus
+      {
+        padding-left: 32px;
+      }
+      }
     @media(min-width: 480px){
+
       .fheaders {
       font-size: 3vw;
     }
@@ -311,7 +316,7 @@
           <div class="mdl-cell mdl-cell--9-col-desktop mdl-cell--6-col-tablet mdl-cell--4-col-phone  mdl-shadow--4dp nomarginsaboveme"
             style="height: fit-content;">
             <hr class="Darkhr MobileSeparator">
-            <div class="mdl-card__supporting-text" style=" padding: 0; width: 100%;">
+            <div id="PackageStatus" class="mdl-card__supporting-text" style="width: 100%;">
               <div>
                 <div class="card ">
                   <div id="HorizontalProgressBar" class="fullwidth">
