--- a/CrossLog/Page de tracking Crosslog/tracking_avec_pr.html
+++ b/CrossLog/Page de tracking Crosslog/tracking_avec_pr.html
@@ -108,6 +108,15 @@
       #PackageStatus
       {
         padding-left: 32px;
+        padding-top: 0px;
+        padding-bottom: 0px;
+        padding-right: 0px;
+      }
+      }
+      @media(min-width: 996px){
+      #PackageStatus
+      {
+        padding: 0px;
       }
       }
     @media(min-width: 480px){
