--- a/CrossLog/Page de tracking Crosslog/tracking_2.html
+++ b/CrossLog/Page de tracking Crosslog/tracking_2.html
@@ -388,19 +388,7 @@
 
 
         <section class="section--center mdl-grid site-max-width">
-          <!--header
-          class="mdl-cell mdl-cell--3-col-desktop mdl-cell--2-col-tablet mdl-cell--4-col-phone mdl-color-text--white  mdl-shadow--4dp nomarginsunderme"
-          style="display: flex; align-items: center; justify-content: center;">
-          <div style="vertical-align: top; display: inline-block;text-align: center;">
-            <div class="h2style">Etat commande</div>
-            <hr class="Darkhr DesktopSeparator">
-            <hr class="LightMobileSeparator Lighthr">
-            <div style="color: #000000; margin: 0 auto;">
-              Votre colis est en acheminement vers la plateforme de livraison.
-            </div>
-          </div>
-        </header-->
-          <div class="mdl-cell mdl-cell--4-col-desktop mdl-cell--6-col-tablet mdl-cell--4-col-phone  mdl-shadow--4dp nomarginsaboveme">
+          <div class="mdl-cell mdl-cell--3-col-desktop mdl-cell--6-col-tablet mdl-cell--4-col-phone  mdl-shadow--4dp nomarginsaboveme">
             <hr class="Darkhr DesktopSeparator" style="padding: 0; color: #000000; margin: 0 auto;">
             <hr class="LightMobileSeparator Lighthr " style="padding: 0; color: #000000; margin: 0 auto;">
             <div class="mdl-card__supporting-text" style="text-align: center; margin: 0 auto;">
@@ -487,46 +475,9 @@
                 </table>
               </div>
             </div>
-          </div>
-          <div class="mdl-cell mdl-cell--4-col-desktop mdl-cell--6-col-tablet mdl-cell--4-col-phone  mdl-shadow--4dp nomarginsaboveme">
-            <hr class="Darkhr DesktopSeparator" style="padding: 0; color: #000000; margin: 0 auto;">
-            <hr class="LightMobileSeparator Lighthr " style="padding: 0; color: #000000; margin: 0 auto;">
-            <div class="mdl-card__supporting-text" style="text-align: center; margin: 0 auto;">
-              <!--img class="article-image" src="img/tabledetail.png" border="0" alt="" style="width: 20%; opacity: 0.55;"-->
-              <div class="h2style">Détail du suivi</div>
-          </div>
-            <hr class="Darkhr DesktopSeparator" style="padding: 0; color: #000000; margin: 0 ; margin-bottom: 5px;">
-            <hr class="LightMobileSeparator Lighthr " style="padding: 0; color: #000000; margin: 0 ; margin-bottom: 5px;">
-            <div class="mdl-card__supporting-text" style="padding-left: 32px ; padding-right: 0px;padding-top: 0px;padding-bottom: 0px;">
-              <div id="VerticalProgressBar2" class="fullwidth">
-                <ul class="progress-tracker progress-tracker--vertical"  style="margin-top: 15px; margin-bottom: 5px;">
-                  <li class="modified progress-step is-complete">
-                    <div class="modified progress-marker"></div>
-                    <div class="modified progress-text">
-                      <h4 class="modified progress-title" style="font-weight: bold;">Mardi 02/06/2019 0:23</h4>
-                      Expédiée
-                    </div>
-                  </li>
-
-                  <li class="modified progress-step is-complete">
-                    <div class="modified progress-marker"></div>
-                    <div class="modified progress-text">
-                      <h4 class="modified progress-title" style="font-weight: bold;">Jeudi 14/06/2019 3:55</h4>
-                      En acheminement vers la plateforme de livraison
-                    </div>
-                  </li>
-
-                  <li class="modified progress-step is-active" aria-current="step">
-                    <div class="modified progress-marker"></div>
-                    <div class="modified progress-text">
-                      <h4 class="modified progress-title" style="font-weight: bold;">Samedi 16/06/2019 13:28</h4>
-                      Colis déclaré
-                    </div>
-                  </li>
-            </div>
-            </div>
             <hr class="Darkhr DesktopSeparator" style="padding: 0; color: #000000; margin: 0 ;">
-            <hr class="LightMobileSeparator Lighthr " style="padding: 0; color: #000000; margin: 0 ;">
+              <hr class="LightMobileSeparator Lighthr " style="padding: 0; color: #000000; margin: 0 ;">
+  
               <div class="mdl-card__supporting-text" style="text-align: center;">
                   <!--img class="article-image" src="img/tabledetail.png" border="0" alt="" style="width: 20%; opacity: 0.55;"-->
                   <div class="h2style">Détail des colis</div>
@@ -551,59 +502,98 @@
                 </div>
               </div>
           </div>
-          <div class="mdl-cell mdl-cell--4-col-desktop mdl-cell--6-col-tablet mdl-cell--4-col-phone  mdl-shadow--4dp nomarginsaboveme">
-            <hr class="Darkhr DesktopSeparator" style="padding: 0; color: #000000; margin: 0 auto;">
-            <hr class="LightMobileSeparator Lighthr " style="padding: 0; color: #000000; margin: 0 auto;">
-            <div class="mdl-card__supporting-text" style="text-align: center; margin: 0 auto;">
-              <i class="fa fa-map-marker fheaders" aria-hidden="true"></i>
-              <div class="h2style" >Adresse de livraison</div>
-          </div>
-            <hr class="Darkhr DesktopSeparator" style="padding: 0; color: #000000; margin: 0 ; margin-bottom: 5px;">
-            <hr class="LightMobileSeparator Lighthr " style="padding: 0; color: #000000; margin: 0 ; margin-bottom: 5px;">
-            <div class="mdl-card__supporting-text" style="padding: 0; color: #000000; margin: 0 0; width: 100%;">
-              <div class="table-responsive-md">
-                <table class="table table-striped">
-                  <tbody>
-                    <tr>
-                      <td style="width: 35%; font-weight: bold;">Client</td>
-                      <td>Mr.X</td>
-                    </tr>
-                  </tbody>
-                </table>
-              </div>
-              <div class="table-responsive-md">
-                <table class="table">
-                  <tbody>
-                    <tr>
-                      <th id ="MapHeader">Point relais</td>
-                    </tr>
-                    <tr>
-                      <td>
-                        <div id="mapDiv" >
-                        <div>
-                      </td>
-                    </tr>
-                  </tbody>
-                </table>
-              </div>
-            </div>
-            <div class="mdl-card__supporting-text" style="padding:0;color: #000000; margin: 0 auto; width: 95%;">
-              <hr class="Darkhr DesktopSeparator" style="padding: 0; color: #000000; margin: 0 ; margin-top: 5px;">
-              <hr class="LightMobileSeparator Lighthr " style="padding: 0; color: #000000; margin: 0 ; margin-top: 5px;">
-              <div class="mdl-card__supporting-text" style="padding: 0; text-align: center;">
-                <div class="h2style">Remarques</div><br>
+          <div class="mdl-cell mdl-cell--9-col-desktop mdl-cell--6-col-tablet mdl-cell--4-col-phone  mdl-shadow--4dp nomarginsaboveme">
+            <hr class="Darkhr DesktopSeparator" style="padding: 0; color: #000000; margin: 0 ;">
+            <hr class="LightMobileSeparator Lighthr " style="padding: 0; color: #000000; margin: 0 ;">
+
+            <div class="mdl-card__supporting-text" style="padding: 0; text-align: center;">
+                <i class="fa fa-map-marker fheaders" aria-hidden="true"></i>
+                <div class="h2style" >Adresse de livraison</div>
               </div>
               <hr class="Darkhr DesktopSeparator" style="padding: 0; color: #000000; margin: 0 ; margin-bottom: 5px;">
               <hr class="LightMobileSeparator Lighthr " style="padding: 0; color: #000000; margin: 0 ; margin-bottom: 5px;">
-              <div class="form-group">
-                <label for="exampleInputEmail1"></label>
-                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Votre remarque ici" style="    border: 3px solid #afb4b9;">
-                <small id="emailHelp" class="form-text text-muted">Une dernière ramarque à notre transpoteur</small>
-                <br><br>
-                <div  style="text-align: center;"><button type="submit" class="btn btn-primary mb-2" style="background-color: #701571; border-color: #701571;">Envoyer</button></div>
+              <div class="mdl-card__supporting-text" style="padding: 0; color: #000000; margin: 0 0; width: 100%;">
+                <div class="table-responsive-md">
+                  <table class="table table-striped">
+                    <tbody>
+                      <tr>
+                        <td style="width: 35%; font-weight: bold;">Client</td>
+                        <td>Mr.X</td>
+                      </tr>
+                    </tbody>
+                  </table>
+                </div>
+                <div class="table-responsive-md">
+                  <table class="table">
+                    <tbody>
+                      <tr>
+                        <th id ="MapHeader">Point relais</td>
+                      </tr>
+                      <tr>
+                        <td>
+                          <div id="mapDiv" >
+                          <div>
+                        </td>
+                      </tr>
+                    </tbody>
+                  </table>
+                </div>
               </div>
+              <div class="mdl-card__supporting-text" style="padding:0;color: #000000; margin: 0 auto; width: 100%;">
+                <hr class="Darkhr DesktopSeparator" style="padding: 0; color: #000000; margin: 0 auto;">
+                <hr class="LightMobileSeparator Lighthr " style="padding: 0; color: #000000; margin: 0 auto;">
+                <div class="mdl-card__supporting-text" style="text-align: center; margin: 0 auto;">
+                  <!--img class="article-image" src="img/tabledetail.png" border="0" alt="" style="width: 20%; opacity: 0.55;"-->
+                  <div class="h2style">Remarques</div>
+              </div>
+                <hr class="Darkhr DesktopSeparator" style="padding: 0; color: #000000; margin: 0 ; margin-bottom: 5px;">
+                <hr class="LightMobileSeparator Lighthr " style="padding: 0; color: #000000; margin: 0 ; margin-bottom: 5px;">
+                <div class="input-group">
+                    <label for="exampleInputEmail1"></label>
+                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Votre remarque ici" style="border: 3px solid #afb4b9;">
+                    <span class="input-group-btn">
+                        <button type="submit" class="btn btn-primary mb-2" style="background-color: #701571; border-color: #701571;">Envoyer</button>
+                    </span>
+                </div>
+                <small id="emailHelp" class="form-text text-muted">Une dernière ramarque à notre transpoteur</small>
+
+              </div>
+              <hr class="Darkhr DesktopSeparator" style="padding: 0; color: #000000; margin: 0 auto;">
+              <hr class="LightMobileSeparator Lighthr " style="padding: 0; color: #000000; margin: 0 auto;">
+              <div class="mdl-card__supporting-text" style="text-align: center; margin: 0 auto;">
+                <!--img class="article-image" src="img/tabledetail.png" border="0" alt="" style="width: 20%; opacity: 0.55;"-->
+                <div class="h2style">Détail du suivi</div>
             </div>
-          </div>
+              <hr class="Darkhr DesktopSeparator" style="padding: 0; color: #000000; margin: 0 ; margin-bottom: 5px;">
+              <hr class="LightMobileSeparator Lighthr " style="padding: 0; color: #000000; margin: 0 ; margin-bottom: 5px;">
+              <div class="mdl-card__supporting-text" style="padding-left: 32px ; padding-right: 0px;padding-top: 0px;padding-bottom: 0px;">
+                <div id="VerticalProgressBar2" class="fullwidth">
+                  <ul class="progress-tracker progress-tracker--vertical"  style="margin-top: 15px; margin-bottom: 5px;">
+                    <li class="modified progress-step is-complete">
+                      <div class="modified progress-marker"></div>
+                      <div class="modified progress-text">
+                        <h4 class="modified progress-title" style="font-weight: bold;">Mardi 02/06/2019 0:23</h4>
+                        Expédiée
+                      </div>
+                    </li>
+  
+                    <li class="modified progress-step is-complete">
+                      <div class="modified progress-marker"></div>
+                      <div class="modified progress-text">
+                        <h4 class="modified progress-title" style="font-weight: bold;">Jeudi 14/06/2019 3:55</h4>
+                        En acheminement vers la plateforme de livraison
+                      </div>
+                    </li>
+  
+                    <li class="modified progress-step is-active" aria-current="step">
+                      <div class="modified progress-marker"></div>
+                      <div class="modified progress-text">
+                        <h4 class="modified progress-title" style="font-weight: bold;">Samedi 16/06/2019 13:28</h4>
+                        Colis déclaré
+                      </div>
+                    </li>
+              </div>
+              </div>
         </section>
       </div>
       <footer class="mdl-mini-footer">
