--- a/CrossLog/Page de tracking Crosslog/tracking_2.html
+++ b/CrossLog/Page de tracking Crosslog/tracking_2.html
@@ -555,7 +555,7 @@
                         <button type="submit" class="btn btn-primary mb-2" style="background-color: #701571; border-color: #701571;">Envoyer</button>
                     </span>
                 </div>
-                <small id="emailHelp" class="form-text text-muted">Une dernière ramarque à notre transpoteur</small>
+                <small id="emailHelp" class="form-text text-muted">Une dernière ramarque au transpoteur</small>
 
               </div>
               <hr class="Darkhr DesktopSeparator" style="padding: 0; color: #000000; margin: 0 auto;">
