--- a/CrossLog/Page de tracking Crosslog/tracking_avec_pr.html
+++ b/CrossLog/Page de tracking Crosslog/tracking_avec_pr.html
@@ -598,7 +598,7 @@
               <div class="form-group">
                 <label for="exampleInputEmail1"></label>
                 <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Votre remarque ici" style="    border: 3px solid #afb4b9;">
-                <small id="emailHelp" class="form-text text-muted">Une dernière ramarque à notre transpoteur</small>
+                <small id="emailHelp" class="form-text text-muted">Une dernière ramarque au transpoteur</small>
                 <br><br>
                 <div  style="text-align: center;"><button type="submit" class="btn btn-primary mb-2" style="background-color: #701571; border-color: #701571;">Envoyer</button></div>
               </div>
