--- a/CrossLog/Page de tracking Crosslog/tracking_avec_pr_2.html
+++ b/CrossLog/Page de tracking Crosslog/tracking_avec_pr_2.html
@@ -523,28 +523,52 @@
             <hr class="Darkhr DesktopSeparator" style="padding: 0; color: #000000; margin: 0 ; margin-bottom: 5px;">
             <hr class="LightMobileSeparator Lighthr " style="padding: 0; color: #000000; margin: 0 ; margin-bottom: 5px;">
             <div class="mdl-card__supporting-text" style="padding-left: 32px ; padding-right: 0px;padding-top: 0px;padding-bottom: 0px;">
-              <table class="table table-borderless">
-                <tbody>
-                  <tr>
-                    <td>
-                      <img class="article-image" src="img/product1.jpg" border="0" alt="" style="width: 50%; margin-bottom: 10px;">
-                    </td>
-                  </tr>
-                  <tr>
-                    <td style="font-weight: bold;">PICTEK Souris Gamer RGB Filaire/Souris de Jeu 8 Boutons Programmables</td>
-                    <td style="font-weight: bold; width: 50%;">Quantité : 1</td>
-                  </tr>
-                  <tr>
-                    <td>
-                      <img class="article-image" src="img/product2.jpg" border="0" alt="" style="width: 50%; margin-bottom: 10px;">
-                    </td>
-                  </tr>
-                  <tr>
-                    <td style="font-weight: bold;">WisFox Clavier Filaire USB Rétroéclairé à LED Arc en Ciel Coloré</td>
-                    <td style="font-weight: bold; width: 50%;">Quantité : 1</td>
-                  </tr>
-                </tbody>
-              </table>
+              <div class="row">
+                <div class="col-sm-6">
+                  <table class="table table-borderless">
+                    <tbody>
+                      <tr>
+                        <td>
+                          <img class="article-image" src="img/product1.jpg" border="0" alt="" style=" width: 50px; height: 50px; margin-bottom: 10px;">
+                        </td>
+                      </tr>
+                      <tr>
+                        <td >PICTEK Souris Gamer RGB Filaire/Souris de Jeu 8 Boutons Programmables <div style="font-weight: bold">Quantité : 1</div></td>
+                      </tr>
+                      <tr>
+                        <td>
+                          <img class="article-image" src="img/product2.jpg" border="0" alt="" style=" width: 50px; height: 50px; margin-bottom: 10px;">
+                        </td>
+                      </tr>
+                      <tr>
+                        <td >WisFox Clavier Filaire USB Rétroéclairé à LED Arc en Ciel Coloré <div style="font-weight: bold">Quantité : 1</div></td>
+                      </tr>
+                    </tbody>
+                  </table>
+                </div>
+                <div class="col-sm-6">
+                  <table class="table table-borderless">
+                    <tbody>
+                      <tr>
+                        <td>
+                          <img class="article-image" src="img/product3.jpg" border="0" alt="" style=" width: 50px; height: 50px; margin-bottom: 10px;">
+                        </td>
+                      </tr>
+                      <tr>
+                        <td >RuoCherg RGB Tapis de Souris Gaming, LED Lumineuse Tapis de Souris <div style="font-weight: bold">Quantité : 1</div></td>
+                      </tr>
+                      <tr>
+                        <td>
+                          <img class="article-image" src="img/product4.jpg" border="0" alt="" style=" width: 50px; height: 50px; margin-bottom: 10px;">
+                        </td>
+                      </tr>
+                      <tr>
+                        <td >The G-LAB K-Stand Radon Support pour Casque/Micro-Casque GAMING <div style="font-weight: bold">Quantité : 1</div></td>
+                      </tr>
+                    </tbody>
+                  </table>
+                </div>
+              </div>
             </div>
             <hr class="Darkhr DesktopSeparator" style="padding: 0; color: #000000; margin: 0 ;">
             <hr class="LightMobileSeparator Lighthr " style="padding: 0; color: #000000; margin: 0 ;">
