--- a/CrossLog/Page de tracking Crosslog/tracking_avec_pr_3.html
+++ b/CrossLog/Page de tracking Crosslog/tracking_avec_pr_3.html
@@ -423,10 +423,10 @@
 
 
         <section class="section--center mdl-grid mdl-grid--no-spacing site-max-width">
-          <div class="mdl-cell mdl-cell--4-col-desktop mdl-cell--6-col-tablet mdl-cell--4-col-phone nomarginsaboveme">
+          <div class="mdl-cell mdl-cell--4-col-desktop mdl-cell--6-col-tablet mdl-cell--4-col-phone">
             <div class="mdl-card__supporting-text" style="text-align: center; margin: 0; padding: 0; width: 100%;">
               <section class="section--center mdl-grid site-max-width">
-                <div class="mdl-cell mdl-cell--12-col-desktop mdl-cell--12-col-tablet mdl-cell--12-col-phone  mdl-shadow--4dp nomarginsaboveme">
+                <div class="mdl-cell mdl-cell--12-col-desktop mdl-cell--12-col-tablet mdl-cell--12-col-phone  mdl-shadow--4dp">
                   <hr class="Darkhr DesktopSeparator" style="padding: 0; color: #000000; margin: 0 auto;">
                   <hr class="LightMobileSeparator Lighthr " style="padding: 0; color: #000000; margin: 0 auto;">
                   <div class="mdl-card__supporting-text" style="text-align: center;">
@@ -454,7 +454,7 @@
                 </div>
               </section>
               <section class="section--center mdl-grid site-max-width">
-                <div class="mdl-cell mdl-cell--12-col-desktop mdl-cell--12-col-tablet mdl-cell--12-col-phone  mdl-shadow--4dp nomarginsaboveme">
+                <div class="mdl-cell mdl-cell--12-col-desktop mdl-cell--12-col-tablet mdl-cell--12-col-phone  mdl-shadow--4dp">
                   <hr class="Darkhr DesktopSeparator" style="padding: 0; color: #000000; margin: 0 auto;">
                   <hr class="LightMobileSeparator Lighthr " style="padding: 0; color: #000000; margin: 0 auto;">
                   <div class="mdl-card__supporting-text" style="text-align: center;">
@@ -510,10 +510,10 @@
               </section>
           </div>
           </div>
-          <div class="mdl-cell mdl-cell--4-col-desktop mdl-cell--6-col-tablet mdl-cell--4-col-phone  nomarginsaboveme">
+          <div class="mdl-cell mdl-cell--4-col-desktop mdl-cell--6-col-tablet mdl-cell--4-col-phone">
             <div class="mdl-card__supporting-text" style="text-align: center; margin: 0; padding: 0; width: 100%;">
               <section class="section--center mdl-grid site-max-width">
-                <div class="mdl-cell mdl-cell--12-col-desktop mdl-cell--12-col-tablet mdl-cell--12-col-phone  mdl-shadow--4dp nomarginsaboveme">
+                <div class="mdl-cell mdl-cell--12-col-desktop mdl-cell--12-col-tablet mdl-cell--12-col-phone  mdl-shadow--4dp">
                   <hr class="Darkhr DesktopSeparator" style="padding: 0; color: #000000; margin: 0 auto;">
                   <hr class="LightMobileSeparator Lighthr " style="padding: 0; color: #000000; margin: 0 auto;">
                   <div class="mdl-card__supporting-text" style="text-align: center;">
@@ -573,7 +573,7 @@
                 </div>
               </section>
               <section class="section--center mdl-grid site-max-width">
-                <div class="mdl-cell mdl-cell--12-col-desktop mdl-cell--12-col-tablet mdl-cell--12-col-phone mdl-shadow--4dp  nomarginsaboveme">
+                <div class="mdl-cell mdl-cell--12-col-desktop mdl-cell--12-col-tablet mdl-cell--12-col-phone mdl-shadow--4dp">
                   <hr class="Darkhr DesktopSeparator" style="padding: 0; color: #000000; margin: 0 auto;">
                   <hr class="LightMobileSeparator Lighthr " style="padding: 0; color: #000000; margin: 0 auto;">
                   <div class="mdl-card__supporting-text" style="text-align: center;">
@@ -613,10 +613,10 @@
               </section>
           </div>
           </div>
-          <div class="mdl-cell mdl-cell--4-col-desktop mdl-cell--6-col-tablet mdl-cell--4-col-phone nomarginsaboveme">
+          <div class="mdl-cell mdl-cell--4-col-desktop mdl-cell--6-col-tablet mdl-cell--4-col-phone">
             <div class="mdl-card__supporting-text" style="text-align: center; margin: 0; padding: 0; width: 100%;">
               <section class="section--center mdl-grid site-max-width">
-                <div class="mdl-cell mdl-cell--12-col-desktop mdl-cell--12-col-tablet mdl-cell--12-col-phone  mdl-shadow--4dp nomarginsaboveme">
+                <div class="mdl-cell mdl-cell--12-col-desktop mdl-cell--12-col-tablet mdl-cell--12-col-phone  mdl-shadow--4dp">
                 <div class="mdl-card__supporting-text" style="padding-left: 32px ; padding-right: 0px;padding-top: 0px;padding-bottom: 0px;">
                   <table class="table table-borderless">
                     <tbody>
@@ -636,7 +636,7 @@
                 </div>
               </section>
               <section class="section--center mdl-grid site-max-width">
-                <div class="mdl-cell mdl-cell--12-col-desktop mdl-cell--12-col-tablet mdl-cell--12-col-phone  mdl-shadow--4dp nomarginsaboveme">
+                <div class="mdl-cell mdl-cell--12-col-desktop mdl-cell--12-col-tablet mdl-cell--12-col-phone  mdl-shadow--4dp">
                   <hr class="Darkhr DesktopSeparator" style="padding: 0; color: #000000; margin: 0 ;">
                   <hr class="LightMobileSeparator Lighthr " style="padding: 0; color: #000000; margin: 0 ;">
                   <div class="mdl-card__supporting-text" style="text-align: center; margin: 0 auto;">
