--- a/CrossLog/Page de tracking Crosslog/tracking_avec_pr_4.html
+++ b/CrossLog/Page de tracking Crosslog/tracking_avec_pr_4.html
@@ -427,10 +427,10 @@
 
 
         <section class="section--center mdl-grid mdl-grid--no-spacing site-max-width">
-          <div class="mdl-cell mdl-cell--4-col-desktop mdl-cell--6-col-tablet mdl-cell--4-col-phone nomarginsaboveme">
+          <div class="mdl-cell mdl-cell--4-col-desktop mdl-cell--6-col-tablet mdl-cell--4-col-phone">
             <div class="mdl-card__supporting-text" style="text-align: center; margin: 0; padding: 0; width: 100%;">
               <section class="section--center mdl-grid site-max-width">
-                <div class="mdl-cell mdl-cell--12-col-desktop mdl-cell--12-col-tablet mdl-cell--12-col-phone  mdl-shadow--4dp nomarginsaboveme">
+                <div class="mdl-cell mdl-cell--12-col-desktop mdl-cell--12-col-tablet mdl-cell--12-col-phone  mdl-shadow--4dp">
                   <hr class="Darkhr DesktopSeparator" style="padding: 0; color: #000000; margin: 0 auto;">
                   <hr class="LightMobileSeparator Lighthr " style="padding: 0; color: #000000; margin: 0 auto;">
                   <div class="mdl-card__supporting-text" style="text-align: center;">
@@ -458,7 +458,7 @@
                 </div>
               </section>
               <section class="section--center mdl-grid site-max-width">
-                <div class="mdl-cell mdl-cell--12-col-desktop mdl-cell--12-col-tablet mdl-cell--12-col-phone  mdl-shadow--4dp nomarginsaboveme">
+                <div class="mdl-cell mdl-cell--12-col-desktop mdl-cell--12-col-tablet mdl-cell--12-col-phone  mdl-shadow--4dp">
                   <hr class="Darkhr DesktopSeparator" style="padding: 0; color: #000000; margin: 0 auto;">
                   <hr class="LightMobileSeparator Lighthr " style="padding: 0; color: #000000; margin: 0 auto;">
                   <div class="mdl-card__supporting-text" style="text-align: center;">
@@ -512,8 +512,8 @@
                 </div>
                 </div>
               </section>
-              <section class="section--center mdl-grid site-max-width" style="padding: 0;">
-                <div class="mdl-cell mdl-cell--12-col-desktop mdl-cell--12-col-tablet mdl-cell--12-col-phone  mdl-shadow--4dp nomarginsaboveme">
+              <section class="section--center mdl-grid site-max-width">
+                <div class="mdl-cell mdl-cell--12-col-desktop mdl-cell--12-col-tablet mdl-cell--12-col-phone  mdl-shadow--4dp">
                   <hr class="Darkhr DesktopSeparator" style="padding: 0; color: #000000; margin: 0 ;">
                   <hr class="LightMobileSeparator Lighthr " style="padding: 0; color: #000000; margin: 0 ;">
                   <div class="mdl-card__supporting-text" style="text-align: center; margin: 0 auto;">
@@ -549,10 +549,10 @@
               </section>
           </div>
           </div>
-          <div class="mdl-cell mdl-cell--8-col-desktop mdl-cell--6-col-tablet mdl-cell--4-col-phone  nomarginsaboveme">
+          <div class="mdl-cell mdl-cell--8-col-desktop mdl-cell--6-col-tablet mdl-cell--4-col-phone">
             <div class="mdl-card__supporting-text" style="text-align: center; margin: 0; padding: 0; width: 100%;">
               <section class="section--center mdl-grid site-max-width">
-                <div class="mdl-cell mdl-cell--12-col-desktop mdl-cell--12-col-tablet mdl-cell--12-col-phone  mdl-shadow--4dp nomarginsaboveme">
+                <div class="mdl-cell mdl-cell--12-col-desktop mdl-cell--12-col-tablet mdl-cell--12-col-phone  mdl-shadow--4dp">
                   <hr class="Darkhr DesktopSeparator" style="padding: 0; color: #000000; margin: 0 auto;">
                   <hr class="LightMobileSeparator Lighthr " style="padding: 0; color: #000000; margin: 0 auto;">
                   <div class="mdl-card__supporting-text" style="text-align: center;">
@@ -655,7 +655,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="mdl-cell mdl-cell--6-col-desktop mdl-cell--12-col-tablet mdl-cell--12-col-phone mdl-shadow--4dp nomarginsaboveme">
+                <div class="mdl-cell mdl-cell--6-col-desktop mdl-cell--12-col-tablet mdl-cell--12-col-phone mdl-shadow--4dp">
                   <div class="mdl-card__supporting-text" style="text-align: center; margin: 0; padding: 0; width: 100%;">
                     <table class="table table-borderless">
                       <tbody>
