--- a/CrossLog/Page de tracking Crosslog/tracking_avec_pr_2.html
+++ b/CrossLog/Page de tracking Crosslog/tracking_avec_pr_2.html
@@ -614,12 +614,12 @@
                 <tbody>
                   <tr>
                     <td>
-                      <img class="article-image" src="img/ad1.PNG" border="0" alt="" style="width: 100%; margin-bottom: 10px;">
+                      <img class="article-image" src="img/ad1.jpg" border="0" alt="" style="width: 100%; margin-bottom: 10px;">
                     </td>
                   </tr>
                   <tr>
                     <td>
-                      <img class="article-image" src="img/ad2.PNG" border="0" alt="" style="width: 100%; margin-bottom: 10px;">
+                      <img class="article-image" src="img/ad2.jpg" border="0" alt="" style="width: 100%; margin-bottom: 10px;">
                     </td>
                   </tr>
                 </tbody>
