--- a/CrossLog/Page de tracking Crosslog/tracking_avec_pr_3.html
+++ b/CrossLog/Page de tracking Crosslog/tracking_avec_pr_3.html
@@ -618,8 +618,20 @@
               <section class="section--center mdl-grid site-max-width">
                 <div class="mdl-cell mdl-cell--12-col-desktop mdl-cell--12-col-tablet mdl-cell--12-col-phone  mdl-shadow--4dp">
                 <div class="mdl-card__supporting-text" style="padding-left: 32px ; padding-right: 0px;padding-top: 0px;padding-bottom: 0px;">
-                  <img class="article-image" src="img/ad1.jpg" border="0" alt="" style="width: 100%; margin-bottom: 10px;">
-                  <img class="article-image" src="img/ad2.jpg" border="0" alt="" style="width: 100%; margin-bottom: 10px;">
+                  <table class="table table-borderless">
+                    <tbody>
+                      <tr>
+                        <td>
+                          <img class="article-image" src="img/ad1.PNG" border="0" alt="" style="width: 100%; margin-bottom: 10px;">
+                        </td>
+                      </tr>
+                      <tr>
+                        <td>
+                          <img class="article-image" src="img/ad2.PNG" border="0" alt="" style="width: 100%; margin-bottom: 10px;">
+                        </td>
+                      </tr>
+                    </tbody>
+                  </table>
                 </div>
                 </div>
               </section>
