--- a/CrossLog/Page de tracking Crosslog/tracking_avec_pr_8.html
+++ b/CrossLog/Page de tracking Crosslog/tracking_avec_pr_8.html
@@ -563,17 +563,17 @@
                   <hr class="LightMobileSeparator Lighthr " style="padding: 0; color: #000000; margin: 0 ; margin-bottom: 5px;">
                 <div class="mdl-card__supporting-text" style="padding-left: 10px ; padding-right: 0px;padding-top: 0px;padding-bottom: 0px; margin: 0 auto; width: 100%;">
                   <div class="row">
-                    <div class="col-sm-6">
+                    <div class="col-sm-12">
                       <table class="table table-borderless">
                         <tbody>
                           <tr>
                             <td>
                               <img class="article-image" src="img/product1.jpg" border="0" alt="" style=" width: 50px; height: 50px; margin-bottom: 10px;">
                             </td>
+                            <td style="width: 25%;" >PICTEK Souris Gamer RGB Filaire/Souris de Jeu 8 Boutons Programmables</td>
+                            <td style="font-weight: bold;">Quantité : 1</td>
                           </tr>
                           <tr>
-                            <td >PICTEK Souris Gamer RGB Filaire/Souris de Jeu 8 Boutons Programmables</td>
-                            <td style="font-weight: bold; width: 50%;">Quantité : 1</td>
                           </tr>
                         </tbody>
                       </table>
