--- a/CrossLog/Page de tracking Crosslog/tracking_avec_pr_4.html
+++ b/CrossLog/Page de tracking Crosslog/tracking_avec_pr_4.html
@@ -567,7 +567,7 @@
                       <table class="table table-borderless">
                         <tbody>
                           <tr>
-                            <td>
+                            <td style="font-weight: bold; text-align: center;">
                               <img class="article-image" src="img/product1.jpg" border="0" alt="" style=" width: 50px; height: 50px; margin-bottom: 10px;">
                             </td>
                           </tr>
@@ -576,7 +576,7 @@
                             <td style="font-weight: bold; width: 50%;">Quantité : 1</td>
                           </tr>
                           <tr>
-                            <td>
+                            <td style="font-weight: bold; text-align: center;">
                               <img class="article-image" src="img/product2.jpg" border="0" alt="" style=" width: 50px; height: 50px; margin-bottom: 10px;">
                             </td>
                           </tr>
@@ -591,7 +591,7 @@
                       <table class="table table-borderless">
                         <tbody>
                           <tr>
-                            <td>
+                            <td style="font-weight: bold; text-align: center;">
                               <img class="article-image" src="img/product3.jpg" border="0" alt="" style=" width: 50px; height: 50px; margin-bottom: 10px;">
                             </td>
                           </tr>
@@ -600,7 +600,7 @@
                             <td style="font-weight: bold; width: 50%;">Quantité : 1</td>
                           </tr>
                           <tr>
-                            <td>
+                            <td style="font-weight: bold; text-align: center;">
                               <img class="article-image" src="img/product4.jpg" border="0" alt="" style=" width: 50px; height: 50px; margin-bottom: 10px;">
                             </td>
                           </tr>
