--- a/CrossLog/Page de tracking Crosslog/tracking_avec_pr_7.html
+++ b/CrossLog/Page de tracking Crosslog/tracking_avec_pr_7.html
@@ -567,7 +567,7 @@
                       <table class="table table-borderless">
                         <tbody>
                           <tr>
-                            <td>
+                            <td style="font-weight: bold; text-align: center;">
                               <img class="article-image" src="img/product1.jpg" border="0" alt="" style=" width: 50px; height: 50px; margin-bottom: 10px;">
                             </td>
                           </tr>
@@ -582,7 +582,7 @@
                       <table class="table table-borderless">
                         <tbody>
                           <tr>
-                            <td>
+                            <td style="font-weight: bold; text-align: center;">
                               <img class="article-image" src="img/product2.jpg" border="0" alt="" style=" width: 50px; height: 50px; margin-bottom: 10px;">
                             </td>
                           </tr>
