--- a/CrossLog/Page de tracking Crosslog/tracking_avec_pr_8.html
+++ b/CrossLog/Page de tracking Crosslog/tracking_avec_pr_8.html
@@ -566,12 +566,12 @@
                     <div class="col-sm-12">
                       <table class="table table-borderless">
                         <tbody>
-                          <tr>
-                            <td>
+                          <tr style="width: 35%;">
+                            <td style="font-weight: bold; text-align: center;">
                               <img class="article-image" src="img/product1.jpg" border="0" alt="" style=" width: 50px; height: 50px; margin-bottom: 10px;">
                             </td>
                             <td style="width: 25%;" >PICTEK Souris Gamer RGB Filaire/Souris de Jeu 8 Boutons Programmables</td>
-                            <td style="font-weight: bold;">Quantité : 1</td>
+                            <td style="font-weight: bold; text-align: center;">Quantité : 1</td>
                           </tr>
                           <tr>
                           </tr>
