--- a/CrossLog/Page de tracking Crosslog/Outputprog.html
+++ b/CrossLog/Page de tracking Crosslog/Outputprog.html
@@ -52,7 +52,8 @@ body,html{padding:0;margin:0}html{box-sizing:border-box}*,:after,:before{box-siz
 </header>
 <div id="header_placeholder"></div>
 <main class="mdl-layout__content">
-<div class="container"><section class="section--center mdl-grid site-max-width"><div class="mdl-cell mdl-cell--12-col-desktop mdl-cell--12-col-tablet mdl-cell--12-col-phone  mdl-shadow--4dp" style="display: flex; align-items: center; justify-content: center;"><div style="vertical-align: top; display: inline-block;text-align: center;">
+<div class="container"><section class="section--center mdl-grid site-max-width"><div class="mdl-cell mdl-cell--12-col-desktop mdl-cell--12-col-tablet mdl-cell--12-col-phone  mdl-shadow--4dp" style="display: flex; align-items: center; justify-content: center;">
+  <div style="text-align: center;">
       <img class="article-image" src="img/logoClient.jpg" border="0" alt="" style="width: 20%; margin-bottom: 10px;">
 
       <div style="color: #000000; margin: 0 auto;">
