--- a/CrossLog/Page de tracking Crosslog/Outputprog.html
+++ b/CrossLog/Page de tracking Crosslog/Outputprog.html
@@ -42,18 +42,18 @@ body,html{padding:0;margin:0}html{box-sizing:border-box}*,:after,:before{box-siz
 <span><body id="top">
 <div class="mdl-layout__container">
 <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header is-upgraded is-small-screen" data-upgraded=",MaterialLayout">
-  <button id="contact-button" class="mdl-button mdl-button--fab mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-shadow--4dp">
+  
+  <!--button id="contact-button" class="mdl-button mdl-button--fab mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-shadow--4dp">
 <img class="article-image" src="https://youssefachrafmoussi.github.io/CrossLog/Page%20de%20tracking%20Crosslog/img/facebook-messenger.png" border="0" alt="" style="margin-bottom: 10px;">
-</button>
+</button-->
 <button id="home-button" class="mdl-button mdl-button--fab mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-shadow--4dp">
-  <img class="article-image" src="https://youssefachrafmoussi.github.io/CrossLog/Page%20de%20tracking%20Crosslog/img/facebook-messenger.png" border="0" alt="" style="margin-bottom: 10px;">
-  </button>
+  <i class="fas fa-search"></i>
   <button id="truck-button" class="mdl-button mdl-button--fab mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-shadow--4dp">
-    <img class="article-image" src="https://youssefachrafmoussi.github.io/CrossLog/Page%20de%20tracking%20Crosslog/img/facebook-messenger.png" border="0" alt="" style="margin-bottom: 10px;">
-    </button>
+    <i class="fas fa-truck"></i>
+  </button>
     <button id="list-button" class="mdl-button mdl-button--fab mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-shadow--4dp">
-      <img class="article-image" src="https://youssefachrafmoussi.github.io/CrossLog/Page%20de%20tracking%20Crosslog/img/facebook-messenger.png" border="0" alt="" style="margin-bottom: 10px;">
-      </button>
+      <i class="fas fa-list"></i>
+          </button>
 <header class="mdl-layout__header site-header is-casting-shadow is-compact">
 <div class="mdl-layout__header-row site-logo-row" style="background-color: #e4e2e4;"><span class="mdl-layout__title">
     <div class="site-logo"></div><span class="site-description">Easy-Colis Tracking</span>
@@ -431,9 +431,9 @@ $(window).resize(function () {
     swapDom(ProduitsCommandeHHolder,TransporterVHolder);
     swapped=1;
     }
-    $('home-button').css('margin-right','0px');
-    $('truck-button').css('margin-right','0px');
-    $('list-button').css('margin-right','0px');
+    $('#home-button').css('margin-right','0px');
+    $('#truck-button').css('margin-right','0px');
+    $('#list-button').css('margin-right','0px');
 
     //BarreHHolderParent.replaceChild(ProduitsCommandeHHolder, BarreHHolder);
 
@@ -443,9 +443,9 @@ $(window).resize(function () {
 
 
   } else {
-    $('home-button').css('margin-right','40px');
-    $('truck-button').css('margin-right','40px');
-    $('list-button').css('margin-right','40px');
+    $('#home-button').css('margin-right','40px');
+    $('#truck-button').css('margin-right','40px');
+    $('#list-button').css('margin-right','40px');
 
     var BarreHHolder = document.getElementById('BarreHHolder');
     var TransporterVHolder = document.getElementById('TransporterVHolder');
